@@ -1,4 +1,10 @@
-﻿shmuel 11.03.2016 18:57:02 +0200 - build 4575
+﻿drkns 12.03.2016 16:37:16 +0200 - build 4576
+
+1. 0003195: Неверная подстановка имён файлов/каталогов с пробелами при включённой опции "Подставлять первый подходящий вариант"
+
+2. 0003196: Автозавершение имён исполняемых файлов из %PATH% предлагается без кавычек даже для файлов с пробелами в имени
+
+shmuel 11.03.2016 18:57:02 +0200 - build 4575
 
 1. FCTL_GETPANELINFO выставляло значение SortMode для кастомных сортировок на 1 больше действительного.
 
